load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "binarytrees.go",
        "bpcountstest.go",
        "break.go",
        "callme.go",
        "cgosigsegvstack.go",
        "cgotest.go",
        "clientdo.go",
        "consts.go",
        "continuetestprog.go",
        "coreemptystring.go",
        "decllinetest.go",
        "defercall.go",
        "deferstack.go",
        "dotpackagesiface.go",
        "dwzcompression.go",
        "fncall.go",
        "goroutinestackprog.go",
        "increment.go",
        "integrationprog.go",
        "is sue239.go",
        "issue1101.go",
        "issue1264.go",
        "issue1374.go",
        "issue1432.go",
        "issue1469.go",
        "issue1531.go",
        "issue1598.go",
        "issue1601.go",
        "issue1615.go",
        "issue262.go",
        "issue305.go",
        "issue332.go",
        "issue384.go",
        "issue387.go",
        "issue406.go",
        "issue419.go",
        "issue528.go",
        "issue561.go",
        "issue573.go",
        "issue594.go",
        "issue664.go",
        "issue683.go",
        "issue871.go",
        "issue877.go",
        "issue951.go",
        "livetestprog.go",
        "locationsUpperCase.go",
        "locationsprog.go",
        "locationsprog2.go",
        "locationsprog3.go",
        "loopprog.go",
        "math.go",
        "nextcond.go",
        "notify-v2.go",
        "panic.go",
        "parallel_next.go",
        "pkgrenames.go",
        "plugintest.go",
        "plugintest2.go",
        "pr1055.go",
        "restartargs.go",
        "retstack.go",
        "scopeescapevareval.go",
        "scopetest.go",
        "sigchldprog.go",
        "sleep.go",
        "stacktraceprog.go",
        "stepoutret.go",
        "testargs.go",
        "testdeadlock.go",
        "testenv.go",
        "testinline.go",
        "testnextdefer.go",
        "testnextnethttp.go",
        "testnextprog.go",
        "testprog.go",
        "testrerecord.go",
        "testreturnaddress.go",
        "testruntimebreakpoint.go",
        "testshadow.go",
        "teststep.go",
        "teststepconcurrent.go",
        "teststepprog.go",
        "testthreads.go",
        "testvariables.go",
        "testvariables2.go",
        "traceperf.go",
        "workdir.go",
    ],
    cgo = True,
    importpath = "github.com/go-delve/delve/_fixtures",
    visibility = ["//visibility:private"],
    deps = [
        "//_fixtures/internal/dir.io:go_default_library",
        "//_fixtures/internal/dir.io/io.io:go_default_library",
        "//_fixtures/internal/dir0/pkg:go_default_library",
        "//_fixtures/internal/dir0/renamedpackage:go_default_library",
        "//_fixtures/internal/dir1/pkg:go_default_library",
        "//_fixtures/internal/pluginsupport:go_default_library",
        "//vendor/github.com/peterh/liner:go_default_library",
    ],
)

go_binary(
    name = "_fixtures",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
