load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "fputest.go",
        "fputest_amd64.s",
    ],
    importpath = "github.com/go-delve/delve/_fixtures/fputest",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "fputest",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
