load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "main.s",
    ],
    importpath = "github.com/go-delve/delve/_fixtures/issue1656",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "issue1656",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
