load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["plugin2.go"],
    importpath = "github.com/go-delve/delve/_fixtures/plugin2",
    visibility = ["//visibility:private"],
    deps = ["//_fixtures/internal/pluginsupport:go_default_library"],
)

go_binary(
    name = "plugin2",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
