load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/go-delve/delve/cmd/dlv",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/dlv/cmds:go_default_library",
        "//pkg/version:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_binary(
    name = "dlv",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["dlv_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/proc/test:go_default_library",
        "//pkg/terminal:go_default_library",
        "//service/rpc2:go_default_library",
        "//vendor/golang.org/x/tools/go/packages:go_default_library",
    ],
)
