load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "amd64_arch.go",
        "amd64_disasm.go",
        "arch.go",
        "arm64_arch.go",
        "arm64_disasm.go",
        "bininfo.go",
        "breakpoints.go",
        "disasm.go",
        "doc.go",
        "eval.go",
        "fncall.go",
        "goroutine_cache.go",
        "i386_arch.go",
        "i386_disasm.go",
        "interface.go",
        "mem.go",
        "moduledata.go",
        "pe.go",
        "registers.go",
        "stack.go",
        "target.go",
        "target_exec.go",
        "threads.go",
        "types.go",
        "variables.go",
        "x86_disasm.go",
    ],
    importpath = "github.com/go-delve/delve/pkg/proc",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/astutil:go_default_library",
        "//pkg/dwarf/frame:go_default_library",
        "//pkg/dwarf/godwarf:go_default_library",
        "//pkg/dwarf/line:go_default_library",
        "//pkg/dwarf/loclist:go_default_library",
        "//pkg/dwarf/op:go_default_library",
        "//pkg/dwarf/reader:go_default_library",
        "//pkg/dwarf/util:go_default_library",
        "//pkg/goversion:go_default_library",
        "//pkg/logflags:go_default_library",
        "//vendor/github.com/hashicorp/golang-lru/simplelru:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/golang.org/x/arch/arm64/arm64asm:go_default_library",
        "//vendor/golang.org/x/arch/x86/x86asm:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "dwarf_expr_test.go",
        "proc_general_test.go",
        "proc_linux_test.go",
        "proc_test.go",
        "proc_unexported_test.go",
        "proc_unix_test.go",
        "scope_test.go",
        "variable_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/dwarf/dwarfbuilder:go_default_library",
        "//pkg/dwarf/frame:go_default_library",
        "//pkg/dwarf/godwarf:go_default_library",
        "//pkg/dwarf/op:go_default_library",
        "//pkg/goversion:go_default_library",
        "//pkg/logflags:go_default_library",
        "//pkg/proc/gdbserial:go_default_library",
        "//pkg/proc/linutil:go_default_library",
        "//pkg/proc/native:go_default_library",
        "//pkg/proc/test:go_default_library",
    ],
)
