load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "error_ids.go",
        "server.go",
    ],
    importpath = "github.com/go-delve/delve/service/dap",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/gobuild:go_default_library",
        "//pkg/logflags:go_default_library",
        "//pkg/proc:go_default_library",
        "//service:go_default_library",
        "//service/api:go_default_library",
        "//service/debugger:go_default_library",
        "//vendor/github.com/google/go-dap:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["server_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/logflags:go_default_library",
        "//pkg/proc/test:go_default_library",
        "//service:go_default_library",
        "//service/dap/daptest:go_default_library",
        "//vendor/github.com/google/go-dap:go_default_library",
    ],
)
