load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "debugger.go",
        "debugger_darwin.go",
        "debugger_freebsd.go",
        "debugger_linux.go",
        "debugger_unix.go",
        "debugger_windows.go",
        "locations.go",
    ],
    importpath = "github.com/go-delve/delve/service/debugger",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/dwarf/op:go_default_library",
        "//pkg/goversion:go_default_library",
        "//pkg/logflags:go_default_library",
        "//pkg/proc:go_default_library",
        "//pkg/proc/core:go_default_library",
        "//pkg/proc/gdbserial:go_default_library",
        "//pkg/proc/native:go_default_library",
        "//service/api:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "//vendor/golang.org/x/sys/unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//vendor/golang.org/x/sys/unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//vendor/golang.org/x/sys/unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//vendor/golang.org/x/sys/unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//vendor/golang.org/x/sys/unix:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "go_default_test",
    srcs = [
        "debugger_test.go",
        "debugger_unix_test.go",
        "locations_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/gobuild:go_default_library",
        "//pkg/proc/test:go_default_library",
        "//service/api:go_default_library",
    ],
)
