load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "server.go",
    ],
    importpath = "github.com/go-delve/delve/service/rpc2",
    visibility = ["//visibility:public"],
    deps = [
        "//service:go_default_library",
        "//service/api:go_default_library",
        "//service/debugger:go_default_library",
    ],
)
