load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "builder.go",
        "info.go",
        "loc.go",
    ],
    importpath = "github.com/go-delve/delve/pkg/dwarf/dwarfbuilder",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/dwarf/godwarf:go_default_library",
        "//pkg/dwarf/op:go_default_library",
        "//pkg/dwarf/util:go_default_library",
    ],
)
