load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "sections.go",
        "tree.go",
        "type.go",
    ],
    importpath = "github.com/go-delve/delve/pkg/dwarf/godwarf",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/dwarf/op:go_default_library",
        "//pkg/dwarf/util:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["tree_test.go"],
    embed = [":go_default_library"],
)
