load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "line_parser.go",
        "state_machine.go",
    ],
    importpath = "github.com/go-delve/delve/pkg/dwarf/line",
    visibility = ["//visibility:public"],
    deps = ["//pkg/dwarf/util:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "line_parser_test.go",
        "state_machine_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/dwarf/godwarf:go_default_library",
        "//pkg/dwarf/util:go_default_library",
        "//vendor/github.com/pkg/profile:go_default_library",
    ],
)
