load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "reader.go",
        "variables.go",
    ],
    importpath = "github.com/go-delve/delve/pkg/dwarf/reader",
    visibility = ["//visibility:public"],
    deps = ["//pkg/dwarf/op:go_default_library"],
)
