load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "auxv.go",
        "doc.go",
        "dynamic.go",
        "regs_amd64_arch.go",
        "regs_arm64_arch.go",
    ],
    importpath = "github.com/go-delve/delve/pkg/proc/linutil",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proc:go_default_library",
        "//vendor/golang.org/x/arch/arm64/arm64asm:go_default_library",
        "//vendor/golang.org/x/arch/x86/x86asm:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["regs_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/golang.org/x/arch/x86/x86asm:go_default_library"],
)
